fixed/firewall.txt
Firewall iptables

Error block access to the registry

yum install iptables-service

execute:

iptables -P INPUT ACCEPT
iptables -P OUTPUT ACCEPT
iptables -P FORWARD ACCEPT
iptables -L -v -n

-- Iptables rules

# Generated by iptables-save v1.4.21 on Tue Oct 15 13:28:24 2019
*nat
:PREROUTING ACCEPT [32:12178]
:INPUT ACCEPT [28:11892]
:OUTPUT ACCEPT [6825:411755]
:POSTROUTING ACCEPT [6825:411755]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Oct 15 13:28:24 2019
# Generated by iptables-save v1.4.21 on Tue Oct 15 13:28:24 2019
*filter
:INPUT ACCEPT [43938:44155650]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [42801:2980017]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Tue Oct 15 13:28:24 2019



-- Disable selinux

/etc/selinux/config


-- Disable firewall for docker

nano /etc/docker/daemon.json


{
"iptables": true
}


-- Create insecure registry

/etc/docker/daemon.json

{
        "dns": ["8.8.8.8", "8.8.4.4"],
"insecure-registries": ["192.168.0.23:5000"]

}


-- Env variable

use the real ip of server

example: 192.168.1.2

MACHINE_FQDN=192.168.3.101
REGISTRY_PORT=5000


-- In portaniner configure

host : 172.17.0.1:5000
external hostname: 192.168.3.101:5000
